# ananke_abm

./: .gitignore  Physics_Constrained_Models_Technical_Overview.md  README.md  pyproject.toml  test_2p_data.py
data/: periods.csv  snaps.csv
scripts/m3/: run_full.sh  run_full_linear.sh  run_full_semi.sh  run_small.sh  run_vae_only_full.sh
scripts/test_rgen/: phase0.sh  phase0_full.sh  phase1.sh  phase1_rejection.sh  phase2.sh  phase2_given_pds.sh  phase2_rejection.sh  phase3.sh  phase3_1.sh  phase3_base_crf.sh  phase3_base_crf_nonhome.sh  phase3_base_crf_rejection.sh  phase3_pmd.sh  phase3_pmd_nonhome.sh  phase3_prep_base_crf.sh  phase3_prep_crf.sh
scripts/test_rgen/base_cnn/: base_train.sh  phase1.sh  phase1_rejection.sh
scripts/test_rgen/crf/pmd/: phase3_pmd.sh  phase3_pmd_nonhome.sh  phase3_pmd_rejection.sh
scripts/test_rgen/hold/: compare.sh
scripts/test_rgen/only_pmd/: phase2.sh  phase2_rejection.sh  pmd_train.sh
scripts/test_rgen/process_train/: phase0.sh  phase0_full.sh
scripts/traj_embed/: full_run_small_linear.sh  full_run_small_semi.sh  gen_n_val_full.sh  gen_n_val_small.sh  quick_run_small.sh  run_full_sim.sh  vae_only_test.sh  visual_gen_full.sh  visual_gen_small.sh  visual_real_full.sh  visual_real_small.sh
src/ananke_abm/: __init__.py
src/ananke_abm/cli/: __init__.py  main.py
src/ananke_abm/cli/run_models/: gen_n_val_traj.py  traj_embed.py  visualize_combined_traj.py
src/ananke_abm/data_generator/: __init__.py  analyze_transitions.py  data_visualization.py  feature_engineering.py  generate_mock_csvs.py  load_data.py  mock_1p.py  mock_2p.py  mock_locations.py
src/ananke_abm/gen_schedule_check/: visualize_multi_samples.ipynb
src/ananke_abm/inference/: __init__.py
src/ananke_abm/models/: __init__.py
src/ananke_abm/models/embed_mapping/: clean_vista.ipynb  embed_prep.py  make_purposes.py  train_dualspace_autoencoder.py  validate_reconstruction.py
src/ananke_abm/models/gen_schedule/: cli.py
src/ananke_abm/models/gnn_embed/: HomoGraph.py  __init__.py  analyze_gnn_ode.py  curriculum.py  ensemble.py  gnn_ode.py  graph_utils.py  manifold_gnn_ode.py  physics_diffusion_ode.py  physics_ode.py  run_manifold_gnn_ode.py
src/ananke_abm/models/inference/: __init__.py
src/ananke_abm/models/latent_ode/: config.py  latent_sde_attention.drawio
src/ananke_abm/models/mode_sep/: config.py  data_paths.yml
src/ananke_abm/models/process_embed_traj_data/: clean_vista.ipynb  fig_primary_lunch_time.py  fig_pror_traj.py  fig_specific_trajs.py  fig_stacked_traj.py  make_purposes.py  (+1 more)
src/ananke_abm/utils/: __init__.py  clean_vista.ipynb  helpers.py  mock_data.py  rejection_sampling.py
src/notebooks/: simple.ipynb
test/: compare_traj.drawio  test_data_batching.py  test_periods_small.csv  test_snaps_small.csv
(+159 files in other folders)
