[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ananke-abm"
version = "0.1.0"
description = "Create to connect synthetic population data with activities predictions for ABM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "torch>=2.7.0",
    "torch-geometric>=2.6.1",
    "torchvision>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[project.scripts]
ananke = "ananke_abm.cli.main:main"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/ananke_abm"]
