[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ananke-abm"
version = "0.1.0"
description = "Create to connect synthetic population data with activities predictions for ABM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "cvxpy>=1.3",
    "dgl>=1.1",
    "folium>=0.19.7",
    "igraph>=0.11.8",
    "jax>=0.4",
    "lightning>=2.0",
    "matplotlib>=3.10.3",
    "networkx>=3.0",
    "pandas>=2.2.3",
    "plotly>=5.0",
    "scipy>=1.10",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torch-geometric>=2.6.1",
    "torchdiffeq>=0.2.3",
    "torchvision>=0.22.0",
    "wandb>=0.20.0",
    "fastdtw>=0.3.4",
    "torchcde==0.2.5",
    "scikit-learn>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[project.scripts]
ananke = "ananke_abm.cli.main:main"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/ananke_abm"]
